Fix FB logic and UI